[package]
name = "minicoro-sys"
version = "0.8.2"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/YC-Lammy/minicoro-sys"
description = "rust binding to minicoro"

keywords = ["minicoro", "coroutine", "generator", "stackful"]
categories = ["api-bindings", "asynchronous", "concurrency", "no-std", "no-std::no-alloc"]

[dependencies]

[build-dependencies]
cc = "1.0"