[package]
name = "tinycoro"
version = "0.8.2"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/YC-Lammy/minicoro-sys"
description = "rust binding to minicoro"
keywords = [ "minicoro", "coroutine", "generator", "stackful" ]
categories = [
"api-bindings",
"asynchronous",
"concurrency",
"no-std",
"no-std::no-alloc"
]


[dependencies.thiserror]
version = "2.0.16"
default-features = false


[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.38"


[[example]]
name = "basic"
path = "examples/basic.rs"


[profile.release]
lto = true
